[package]
name = "amp"
version = "0.1.0"
authors = ["Wojciech <wojciech@wkepka.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
log = "0.4"
env_logger = "0.7"


[[bin]]
name = "amp_cli"
path = "./src/bin/amp_cli.rs"
